--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
 		"chroma-js": "2.1.0",
 		"classnames": "2.3.1",
 		"cleave.js": "1.6.0",
+		"datatables.net": "^1.13.6",
+		"datatables.net-bs5": "^1.13.6",
 		"draft-js": "0.11.7",
 		"draftjs-to-html": "0.9.1",
 		"file-saver": "2.0.2",
@@ -53,7 +55,7 @@
 		"react-contexify": "5.0.0",
 		"react-copy-to-clipboard": "5.0.2",
 		"react-country-flag": "2.0.1",
-		"react-data-table-component": "7.4.5",
+		"react-data-table-component": "^7.4.5",
 		"react-dom": "17.0.2",
 		"react-draft-wysiwyg": "^1.15.0",
 		"react-dropzone": "11.4.2",
