--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
 		"@popperjs/core": "^2.11.3",
 		"@reduxjs/toolkit": "^1.2.5",
 		"animate.css": "4.1.1",
-		"apexcharts": "3.29.0",
+		"apexcharts": "^3.29.0",
 		"apexcharts-clevision": "3.28.3",
-		"axios": "0.24.0",
+		"axios": "^0.24.0",
 		"axios-mock-adapter": "1.19.0",
 		"bootstrap": "5.1.0",
 		"bs-stepper": "1.7.0",
@@ -48,7 +48,7 @@
 		"prop-types": "15.7.2",
 		"rc-input-number": "7.3.3",
 		"react": "17.0.2",
-		"react-apexcharts": "1.3.9",
+		"react-apexcharts": "^1.3.9",
 		"react-chartjs-2": "3.3.0",
 		"react-contexify": "5.0.0",
 		"react-copy-to-clipboard": "5.0.2",
