--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"rc-input-number": "7.3.3",
 		"react": "17.0.2",
 		"react-apexcharts": "^1.3.9",
+		"react-bootstrap": "^2.8.0",
 		"react-chartjs-2": "3.3.0",
 		"react-contexify": "5.0.0",
 		"react-copy-to-clipboard": "5.0.2",
