--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"apexcharts-clevision": "3.28.3",
 		"axios": "0.24.0",
 		"axios-mock-adapter": "1.19.0",
-		"bootstrap": "5.1.0",
+		"bootstrap": "^5.1.0",
 		"bs-stepper": "1.7.0",
 		"chart.js": "^3.6.0",
 		"chroma-js": "2.1.0",
@@ -31,12 +31,13 @@
 		"draftjs-to-html": "0.9.1",
 		"file-saver": "2.0.2",
 		"flatpickr": "4.6.3",
+		"font-awesome": "^4.7.0",
 		"history": "5.1.0",
 		"html-to-draftjs": "1.5.0",
 		"i18next": "21.4.0",
 		"i18next-browser-languagedetector": "6.1.2",
 		"i18next-xhr-backend": "3.2.2",
-		"jquery": "3.5.1",
+		"jquery": "^3.5.1",
 		"jsonwebtoken": "^9.0.0",
 		"moment": "^2.29.4",
 		"nouislider": "^15.5.0",
