--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"rc-input-number": "7.3.3",
 		"react": "17.0.2",
 		"react-apexcharts": "^1.3.9",
+		"react-awesome-slider": "^4.1.0",
 		"react-bootstrap": "^2.8.0",
 		"react-chartjs-2": "3.3.0",
 		"react-contexify": "5.0.0",
@@ -58,6 +59,7 @@
 		"react-dom": "17.0.2",
 		"react-draft-wysiwyg": "^1.15.0",
 		"react-dropzone": "11.4.2",
+		"react-elastic-carousel": "^0.11.5",
 		"react-feather": "~2.0.3",
 		"react-flatpickr": "3.9.1",
 		"react-hook-form": "7.18.1",
@@ -69,6 +71,7 @@
 		"react-player": "2.6.2",
 		"react-rating": "2.0.5",
 		"react-redux": "7.2.0",
+		"react-responsive-carousel": "^3.2.23",
 		"react-router-dom": "6.2.2",
 		"react-scripts": "^5.0.1",
 		"react-select": "5.2.0",
@@ -86,7 +89,7 @@
 		"styled-components": "5.1.1",
 		"sweetalert2": "11.1.9",
 		"sweetalert2-react-content": "4.2.0",
-		"swiper": "7.2.0",
+		"swiper": "^7.4.1",
 		"wnumb": "1.2.0",
 		"xlsx": "0.17.3",
 		"yarn": "^1.22.19",
