--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"react": "17.0.2",
 		"react-apexcharts": "^1.3.9",
 		"react-avatar": "^5.0.3",
+		"react-bootstrap": "^2.8.0",
 		"react-chartjs-2": "^3.3.0",
 		"react-contexify": "5.0.0",
 		"react-copy-to-clipboard": "5.0.2",
@@ -88,7 +89,7 @@
 		"styled-components": "5.1.1",
 		"sweetalert2": "11.1.9",
 		"sweetalert2-react-content": "4.2.0",
-		"swiper": "7.2.0",
+		"swiper": "^7.2.0",
 		"wnumb": "1.2.0",
 		"xlsx": "0.17.3",
 		"yarn": "^1.22.19",
