--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"draft-js": "0.11.7",
 		"draftjs-to-html": "0.9.1",
 		"file-saver": "2.0.2",
-		"flatpickr": "4.6.3",
+		"flatpickr": "^4.6.13",
 		"font-awesome": "^4.7.0",
 		"history": "5.1.0",
 		"html-to-draftjs": "1.5.0",
@@ -61,7 +61,7 @@
 		"react-draft-wysiwyg": "^1.15.0",
 		"react-dropzone": "11.4.2",
 		"react-feather": "~2.0.3",
-		"react-flatpickr": "3.9.1",
+		"react-flatpickr": "^3.9.1",
 		"react-hook-form": "7.18.1",
 		"react-hot-toast": "2.2.0",
 		"react-i18next": "11.13.0",
